<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddItemActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/new_fav_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="3"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="Enter your favorite within 140 characters"
            android:maxLength="140"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"

            android:text="Save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/select_image_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Select image of your favorite" />

        <ImageView
            android:id="@+id/new_fav_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_marginTop="5dp"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/new_fav_des"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:ems="10"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="start|top"
            android:maxLength="500"
            android:hint="Tell the story of your favorite things with in 500 characters"
            android:inputType="textMultiLine" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>